[project]
name = "site-twilight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "charset-normalizer==3.4.4",
    "dj-database-url>=3.0.1",
    "django==6.0",
    "django-cors-headers==4.9.0",
    "gunicorn==23.0.0",
    "idna==3.11",
    "packaging==25.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "sqlparse==0.5.5",
    "urllib3==2.6.2",
    "whitenoise==6.11.0",
]
